<?xml version="1.0" encoding="utf-8"?>
<resources>
   <string name="app_name">Dominant Species Scorer</string>

   <!-- animals -->
   <string name="Mammals">Mammals</string>
   <string name="Reptiles">Reptiles</string>
   <string name="Birds">Birds</string>
   <string name="Amphibians">Amphibians</string>
   <string name="Arachnids">Arachnids</string>
   <string name="Insects">Insects</string>
   <string name="Hex">Hex</string>

   <!-- elements -->
   <string name="Meat">Meat</string>
   <string name="Sun">Sun</string>
   <string name="Seeds">Seeds</string>
   <string name="Water">Water</string>
   <string name="Grub">Grub</string>
   <string name="Grass">Grass</string>
   <string name="empty"> </string>


   <!-- widget references -->
   <string name="AnimalElements">Animal Elements</string>
   <string name="score_0">0</string>
   <string name="element_1">Element 1</string>
   <string name="element_2">Element 2</string>
   <string name="element_3">Element 3</string>
   <string name="element_4">Element 4</string>
   <string name="element_5">Element 5</string>
   <string name="element_6">Element 6</string>

   <string-array name="element_popups">
      <item>Meat</item>
      <item>Sun</item>
      <item>Seeds</item>
      <item>Water</item>
      <item>Grub</item>
      <item>Grass</item>
      <item>Empty</item>
   </string-array>

</resources>
